--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             margin: 0px;
             padding: 0px;
         }
+        img {
+            width: 100%;
+        }
         .none {
             display: none;
         }
